doc/Parsers/PrologParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PrologParser.java */
package org.peertrust.inference.prolog.parser;

import java.io.* ;

public class PrologParser/*@bgen(jjtree)*/implements PrologParserTreeConstants, PrologParserConstants {/*@bgen(jjtree)*/
  protected JJTPrologParserState jjtree = new JJTPrologParserState();public static void main(String args[]) throws ParseException, TokenMgrError
        {
                PrologParser parser = new PrologParser(System.in);
                SimpleNode node = parser.parseGoal() ;
                node.dump("") ;
        }

        public static SimpleNode parseGoal(String goal) throws ParseException
        {
                StringReader sr = new StringReader( goal );
                Reader r = new BufferedReader( sr );
                PrologParser parser = new PrologParser ( r );
                return parser.parseGoal() ;
        }

        void jjtreeOpenNodeScope( Node node )
        {
//		((SimpleNode)node).first_token = getToken(1);
        }

        void jjtreeCloseNodeScope( Node node )
        {
//		((SimpleNode)node).last_token = getToken(0);
        }

// S :- Goal <EOF>
  final public SimpleNode parseGoal() throws ParseException {
    trace_call("parseGoal");
    try {
 /*@bgen(jjtree) parseGoal */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSEGOAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        Goal();
        jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtreeCloseNodeScope(jjtn000);
          {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parseGoal");
    }
  }

// Goal :- [SEP] Literal
  final public void Goal() throws ParseException {
    trace_call("Goal");
    try {
 /*@bgen(jjtree) Goal */
  SimpleNode jjtn000 = new SimpleNode(JJTGOAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_1(2)) {
          jj_consume_token(SEP);
        } else {
          ;
        }
        Literal();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Goal");
    }
  }

// Literal :- [UNARYOP] Atom
  final public void Literal() throws ParseException {
    trace_call("Literal");
    try {
 /*@bgen(jjtree) Literal */
  SimpleNode jjtn000 = new SimpleNode(JJTLITERAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_2(2)) {
          jj_consume_token(UNARYOP);
        } else {
          ;
        }
        Atom();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Literal");
    }
  }

// Atom :- Predicate() | Predicate "(" TermList ")"
  final public void Atom() throws ParseException {
    trace_call("Atom");
    try {
 /*@bgen(jjtree) Atom */
  SimpleNode jjtn000 = new SimpleNode(JJTATOM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        Predicate();
        if (jj_2_3(2)) {
          jj_consume_token(13);
          TermList();
          jj_consume_token(14);
        } else {
          ;
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Atom");
    }
  }

// TermList :- Term [TermList]
  final public void TermList() throws ParseException {
    trace_call("TermList");
    try {
 /*@bgen(jjtree) TermList */
  SimpleNode jjtn000 = new SimpleNode(JJTTERMLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        Term();
        if (jj_2_4(2)) {
          jj_consume_token(15);
          TermList();
        } else {
          ;
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("TermList");
    }
  }

// ArgList :- Argument | Argument "," ArgList
// Term :- Variable | Constant | CompoundTerm | List
  final public void Term() throws ParseException {
    trace_call("Term");
    try {
 /*@bgen(jjtree) Term */
  SimpleNode jjtn000 = new SimpleNode(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_5(2)) {
          Variable();
        } else if (jj_2_6(2)) {
          Constant();
        } else if (jj_2_7(2)) {
          CompoundTerm();
        } else if (jj_2_8(2)) {
          List();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Term");
    }
  }

// CompoundTerm :- Functor "(" [TermList] ")"
  final public void CompoundTerm() throws ParseException {
    trace_call("CompoundTerm");
    try {
 /*@bgen(jjtree) CompoundTerm */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPOUNDTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        Functor();
        jj_consume_token(13);
        if (jj_2_9(2)) {
          TermList();
        } else {
          ;
        }
        jj_consume_token(14);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("CompoundTerm");
    }
  }

// List :- "[" [TermList] "]"
  final public void List() throws ParseException {
    trace_call("List");
    try {
 /*@bgen(jjtree) List */
  SimpleNode jjtn000 = new SimpleNode(JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        jj_consume_token(16);
        if (jj_2_10(2)) {
          TermList();
        } else {
          ;
        }
        jj_consume_token(17);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("List");
    }
  }

// ELEMENTS

// Letter :- (LOWERLETTER | UPPERLETTER)
  final public void Letter() throws ParseException {
    trace_call("Letter");
    try {
 /*@bgen(jjtree) Letter */
  SimpleNode jjtn000 = new SimpleNode(JJTLETTER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_11(2)) {
          jj_consume_token(LOWERLETTER);
        } else if (jj_2_12(2)) {
          jj_consume_token(UPPERLETTER);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Letter");
    }
  }

// Letters :- (LOWERLETTER | UPPERLETTER)+
  final public void Letters() throws ParseException {
    trace_call("Letters");
    try {
 /*@bgen(jjtree) Letters */
  SimpleNode jjtn000 = new SimpleNode(JJTLETTERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        label_1:
        while (true) {
          Letter();
          if (jj_2_13(2)) {
            ;
          } else {
            break label_1;
          }
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Letters");
    }
  }

// Character :- Letter | DIGIT | "_"
  final public void Character() throws ParseException {
    trace_call("Character");
    try {
 /*@bgen(jjtree) Character */
  SimpleNode jjtn000 = new SimpleNode(JJTCHARACTER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_14(2)) {
          Letter();
        } else if (jj_2_15(2)) {
          jj_consume_token(DIGIT);
        } else if (jj_2_16(2)) {
          jj_consume_token(18);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Character");
    }
  }

// Characters :- (Character)+
  final public void Characters() throws ParseException {
    trace_call("Characters");
    try {
 /*@bgen(jjtree) Characters */
  SimpleNode jjtn000 = new SimpleNode(JJTCHARACTERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        label_2:
        while (true) {
          Character();
          if (jj_2_17(2)) {
            ;
          } else {
            break label_2;
          }
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Characters");
    }
  }

// Digits :- (Digit)+
  final public void Digits() throws ParseException {
    trace_call("Digits");
    try {
 /*@bgen(jjtree) Digits */
  SimpleNode jjtn000 = new SimpleNode(JJTDIGITS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        label_3:
        while (true) {
          jj_consume_token(DIGIT);
          if (jj_2_18(2)) {
            ;
          } else {
            break label_3;
          }
        }
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Digits");
    }
  }

// Number :- Digits | Digits "." Digits // | Digits "." | "." Digits
  final public void Number() throws ParseException {
    trace_call("Number");
    try {
 /*@bgen(jjtree) Number */
  SimpleNode jjtn000 = new SimpleNode(JJTNUMBER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_19(2)) {
          Digits();
        } else if (jj_2_20(2)) {
          Digits();
          jj_consume_token(19);
          Digits();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Number");
    }
  }

// Constant: LOWERLETTER CHARACTERS | "'" CHARACTERS "'" | "\"" CHARACTERS "\""
  final public void Constant() throws ParseException {
    trace_call("Constant");
    try {
 /*@bgen(jjtree) Constant */
  SimpleNode jjtn000 = new SimpleNode(JJTCONSTANT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_21(2)) {
          jj_consume_token(LOWERLETTER);
        } else if (jj_2_22(2)) {
          jj_consume_token(LOWERLETTER);
          Characters();
        } else if (jj_2_23(2)) {
          jj_consume_token(20);
          Characters();
          jj_consume_token(20);
        } else if (jj_2_24(2)) {
          jj_consume_token(21);
          Characters();
          jj_consume_token(21);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Constant");
    }
  }

// Variable :- ( UPPERLETTER | "_" ) Characters
  final public void Variable() throws ParseException {
    trace_call("Variable");
    try {
 /*@bgen(jjtree) Variable */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_29(2)) {
          if (jj_2_25(2)) {
            jj_consume_token(UPPERLETTER);
          } else if (jj_2_26(2)) {
            jj_consume_token(18);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else if (jj_2_30(2)) {
          if (jj_2_27(2)) {
            jj_consume_token(UPPERLETTER);
          } else if (jj_2_28(2)) {
            jj_consume_token(18);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          Characters();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Variable");
    }
  }

// Functor :- LOWERLETTER (Letters)? [ (DIGITS)? [ (Letters)? ] ]
  final public void Functor() throws ParseException {
    trace_call("Functor");
    try {
 /*@bgen(jjtree) Functor */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        if (jj_2_31(2)) {
          jj_consume_token(LOWERLETTER);
        } else if (jj_2_32(2)) {
          jj_consume_token(LOWERLETTER);
          Letters();
        } else if (jj_2_33(2)) {
          jj_consume_token(LOWERLETTER);
          Letters();
          Digits();
        } else if (jj_2_34(2)) {
          jj_consume_token(LOWERLETTER);
          Letters();
          Digits();
          Letters();
        } else if (jj_2_35(2)) {
          jj_consume_token(EXTRACHARACTER);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Functor");
    }
  }

// Predicate := Functor
  final public void Predicate() throws ParseException {
    trace_call("Predicate");
    try {
 /*@bgen(jjtree) Predicate */
  SimpleNode jjtn000 = new SimpleNode(JJTPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
      try {
        Functor();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
      }
    } finally {
      trace_return("Predicate");
    }
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }
